<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:id="@+id/checkBox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:id="@+id/checkBox2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:id="@+id/checkBox3" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:id="@+id/checkBox4" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:id="@+id/checkBox5" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:id="@+id/checkBox6" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:id="@+id/checkBox7" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:id="@+id/view"
        android:background="#cccccc"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/textView"
        android:paddingEnd="100dp"
        android:paddingStart="100dp"
        android:padding="10dp"
        android:layout_gravity="center" />

</LinearLayout>