<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="3dp"
    android:paddingStart="3dp"
    android:padding="3dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e6eedf">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12"
                android:id="@+id/textView2"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/colon"
                android:id="@+id/textView4"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12"
                android:id="@+id/textView5"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/hyphen"
                android:id="@+id/textView6"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12"
                android:id="@+id/textView3"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/colon"
                android:id="@+id/textView7"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_12"
                android:id="@+id/textView8"
                android:textSize="25dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:id="@+id/textView9"
                android:textColor="#f84747" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>